--- a/src/assets/_tooltip.scss
+++ b/src/assets/_tooltip.scss
@@ -1,24 +1,18 @@
-/**
- * Tooltip Styles
- */
-
-/* Add this attribute to the element that needs a tooltip */
 [data-tooltip] {
 	position: relative;
 	z-index: 2;
 	cursor: pointer;
+	color: #7e7676;
+	font-size:15px;
 }
 
-/* Hide the tooltip content by default */
 [data-tooltip]:before,
 [data-tooltip]:after {
 	visibility: hidden;
-	-ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=0)';
 	opacity: 0;
 	pointer-events: none;
 }
 
-/* Position tooltip above the element */
 [data-tooltip]:before {
 	position: absolute;
 	bottom: 150%;
@@ -27,8 +21,6 @@
 	margin-left: -80px;
 	padding: 7px;
 	width: 300px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
 	border-radius: 3px;
 	background-color: #000;
 	background-color: hsla(0, 0%, 20%, 0.9);
@@ -40,7 +32,6 @@
 	z-index: 100000000;
 }
 
-/* Triangle hack to make tooltip look like a speech bubble */
 [data-tooltip]:after {
 	position: absolute;
 	bottom: 150%;
@@ -54,13 +45,10 @@
 	content: ' ';
 	font-size: 0;
 	line-height: 0;
-	z-index: 100000000;
 }
 
-/* Show tooltip content on hover */
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after {
 	visibility: visible;
 	opacity: 1;
-	z-index: 100000000;
 }
